--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.0.0",
     "@fastify/cors": "^9.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "dayjs": "^1.11.13",
